# Distributed-File-Sync-System

./: .gitignore  BOOST_SETUP_WINDOWS.md  CMakeLists.txt  DEVELOPMENT_GUIDE.md  README.md  build.sh  phase_1_reference.md  test_phase3.bat
.claude/: settings.local.json
docs/: event_bus_explanation_for_dummies.md  phase_2_code_reference.md  phase_2_reference.md  phase_3_code_reference.md  phase_3_reference.md  phase_4_reference.md
examples/: CMakeLists.txt  http_router_example.cpp  http_server_comparison.cpp  http_server_example.cpp  metadata_server_asio_example.cpp  metadata_server_events_example.cpp  metadata_server_example.cpp  socket_example.cpp  sync_demo_server.cpp
include/dfs/core/: platform.hpp  result.hpp
include/dfs/events/: components.hpp  event_bus.hpp  event_queue.hpp  events.hpp
include/dfs/metadata/: lexer.hpp  parser.hpp  serializer.hpp  store.hpp  types.hpp
include/dfs/network/: http_parser.hpp  http_router.hpp  http_server.hpp  http_server_asio.hpp  http_server_legacy.hpp  http_types.hpp  socket.hpp
include/dfs/sync/: change_detector.hpp  conflict.hpp  merkle_tree.hpp  service.hpp  session.hpp  transfer.hpp  types.hpp
src/core/: CMakeLists.txt
src/events/: CMakeLists.txt
src/metadata/: CMakeLists.txt
src/network/: ASIO_EXPLAINED.md  CMakeLists.txt  SOCKET_API_REFERENCE.md  THREADING_EXPLAINED.md  http_router.cpp  http_server.cpp  http_server_asio.cpp  http_server_legacy.cpp  multi_threaded_impl.md  socket.cpp  socket_simple.cpp
src/server/: CMakeLists.txt  sync_service.cpp
src/sync/: CMakeLists.txt  change_detector.cpp  conflict.cpp  merkle_tree.cpp  session.cpp  transfer.cpp
tests/: CMakeLists.txt
tests/e2e/: run_sync_e2e.ps1
tests/e2e/sample/: note_downloaded_v1.txt  note_stage.txt
tests/events/: event_bus_test.cpp  event_queue_test.cpp  metrics_component_test.cpp
tests/sync/: change_detector_test.cpp  conflict_resolver_test.cpp  merkle_tree_test.cpp  session_test.cpp  sync_service_test.cpp  transfer_test.cpp
